# kubesphere-ks-installer

./: Dockerfile  Makefile  pyproject.toml
controller/: installRunner.py
deploy/: cluster-configuration.yaml  kubesphere-installer.yaml
roles/common/tasks/: openldap-install.yaml
roles/preinstall/tasks/: precheck.yaml
